--- a/package.json
+++ b/package.json
@@ -34,6 +34,10 @@
 		"eject": "react-scripts eject"
 	},
 	"eslintConfig": {
+		"rules": {
+			"no-unused-vars": "warn",
+			"no-console": "off"
+		},
 		"extends": [
 			"react-app",
 			"react-app/jest"
